--- a/.github/workflows/generic-testing.yaml
+++ b/.github/workflows/generic-testing.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   call-deploy:
-    uses: ./.github/workflows/generic.yaml@main
+    uses: ./.github/workflows/generic.yaml
     with:
       domain: jira
 
