--- a/.github/workflows/generic.yaml
+++ b/.github/workflows/generic.yaml
@@ -23,23 +23,29 @@ jobs:
     - name: Check if user is part of the selected team
       id: check_team_membership
       run: |
-        user=${{ github.actor }}
-        team_slug=$team_slug
-        org="pacific-devops"
+       user=${{ github.actor }}
+       team_slug=$team_slug
+       org="pacific-devops"
 
         # Fetch all the teams the user belongs to
         response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-        https://api.github.com/user/memberships/teams)
+        https://api.github.com/orgs/$org/teams/$team_slug/memberships/$user)
 
-        # Check if the user belongs to the expected team
-        is_member=$(echo $response | jq -r --arg team "$team_slug" '.[] | select(.team.slug == $team)')
+        # Print the raw API response for debugging
+        echo "API Response: $response"
 
-        if [ -z "$is_member" ]; then
-         echo "$user is not a member of the $team_slug team, aborting."
-         echo "is_member=false" >> $GITHUB_ENV
-        else
+        # Debug the response structure
+         echo $response | jq '.'
+
+        # Check membership state in the response
+        membership_state=$(echo $response | jq -r '.state')
+
+       if [ "$membership_state" != "active" ]; then
+        echo "$user is not a member of the $team_slug team, aborting."
+        echo "is_member=false" >> $GITHUB_ENV
+       else
          echo "$user is an active member of the $team_slug team, proceeding with deployment."
-        echo "is_member=true" >> $GITHUB_ENV
+         echo "is_member=true" >> $GITHUB_ENV
         fi
 
     - name: Deploy artifacts to JFrog
