--- a/.github/workflows/generic.yaml
+++ b/.github/workflows/generic.yaml
@@ -9,6 +9,11 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   check-and-deploy:
     runs-on: ubuntu-latest
