--- a/.github/workflows/generic-testing.yaml
+++ b/.github/workflows/generic-testing.yaml
@@ -5,7 +5,11 @@ on:
   push:
     branches:
       - main
-
+      
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
 jobs:
   call-deploy:
     uses: ./.github/workflows/generic.yaml
