--- a/.github/workflows/generic.yaml
+++ b/.github/workflows/generic.yaml
@@ -29,7 +29,7 @@ jobs:
       id: check_team_membership
       run: |
         org="pacific-devops"
-        response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        response=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
         https://api.github.com/orgs/$org/teams)
 
         echo "Teams in the organization:"
