--- a/.github/workflows/generic.yaml
+++ b/.github/workflows/generic.yaml
@@ -31,7 +31,7 @@ jobs:
 
     - name: List teams with access to the repository
       run: |
-        response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        response=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
         https://api.github.com/repos/$owner/$repo/teams)
 
         echo "Teams with access to the repository:"
