--- a/.github/workflows/generic-testing.yaml
+++ b/.github/workflows/generic-testing.yaml
@@ -14,6 +14,7 @@ permissions:
 jobs:
   call-deploy:
     uses: ./.github/workflows/generic.yaml
+    secrets: inherit
     with:
       domain: jira
 
