--- a/.github/workflows/generic.yaml
+++ b/.github/workflows/generic.yaml
@@ -21,13 +21,11 @@ jobs:
     steps:
     - name: Set domain and team variables
       run: |
-        actor="${{ github.actor }}"  # The user who triggered the workflow
-        org="your-org-name"  # Replace with your organization name
-        team_slug="jira-developer"  # Replace with your actual team slug
+        org="pacific-devops"  # Organization name
+        team_slug="jira-developer"  # Use the correct slug from the previous step
 
-        # List all members of the team
         response=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
-         https://api.github.com/orgs/$org/teams/$team_slug/members)
+        https://api.github.com/orgs/$org/teams/$team_slug/members)
 
-        # Print the entire response
+         # Print the entire response
         echo "Team Members: $response"
