--- a/myCalculator/pom.xml
+++ b/myCalculator/pom.xml
@@ -29,20 +29,18 @@
         </dependency>
     </dependencies>
 
-    <!-- Build Configuration -->
+    <!-- Single Build Section -->
     <build>
+        <!-- Maven Surefire Plugin for running tests -->
         <plugins>
-            <!-- Maven Surefire Plugin for running tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
             </plugin>
         </plugins>
-    </build>
-
-    <!-- Override Default Source/Target Directories -->
-    <build>
+        
+        <!-- Override Default Source/Target Directories -->
         <sourceDirectory>src/main</sourceDirectory>
         <testSourceDirectory>src/test</testSourceDirectory>
     </build>
